--- a/document-ingestion-service/src/main/resources/application.properties
+++ b/document-ingestion-service/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=document-ingestion-service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/your-database-name?createDatabaseIfNotExist=true&serverTimezone=UTC
+server.port=9091
+
+spring.datasource.url=jdbc:mysql://localhost:3306/document_ingestion?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=60MB
