--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=user-service
+eureka.client.service-url.defaultZone=http://localhost:9092/eureka
+server.port=9092
+
+spring.datasource.url=jdbc:mysql://localhost:3306/doc_user?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
