--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=user-service
-eureka.client.service-url.defaultZone=http://localhost:9092/eureka
 server.port=9092
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/doc_user?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
@@ -8,4 +9,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+foneapp.app.jwt.secret=pjjktechdocingestionappmicro@321!
+foneapp.app.jwt.expiration.duration=P1DT10M
 
