--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=user-service
 server.port=9092
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/doc_user?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
