--- a/user-service/.gitattributes
+++ b/user-service/.gitattributes
@@ -1,2 +1,15 @@
+# Set default behavior to use LF
+* text=auto eol=lf
+
+# Handle Maven wrapper scripts
 /mvnw text eol=lf
+/mvnw.cmd text eol=crlf
+
+# Handle Windows command scripts
 *.cmd text eol=crlf
+
+# Explicitly force LF for Java files
+*.java text eol=lf
+
+# Explicitly handle binary files
+*.{png,jpg,gif,pdf,zip,exe,dll,ico,woff,woff2,ttf,eot} binary
