--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,24 +1,25 @@
 server:
-  port: 8081
+  port: 8080
 
 spring:
   application:
     name: api-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
       routes:
         - id: user-service
           uri: lb://user-service
           predicates:
-            - Path=/api/user/**
-          filters:
-            - AuthenticationFilter
+            - Path=/oauth2/**, /login, /logout, /api/users/register
+
         - id: document-ingestion-service
           uri: lb://document-ingestion-service
           predicates:
             - Path=/api/docs/**
-          filters:
-            - AuthenticationFilter
     loadbalancer:
       ribbon:
         enabled: false
@@ -26,10 +27,17 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          jwk-set-uri: http://user-service:9092/oauth2/jwks
+          issuer-uri: http://localhost:9092
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.cloud.gateway: DEBUG
+    reactor.netty.http.client: DEBUG
+
